# forge

./: .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2025-05-21-v0.10-remaining-hardening.md
hub/: PICKMEUP.md
hub/app/assets/tailwind/: application.css
hub/app/controllers/: application_controller.rb  bellows_controller.rb  bridge_controller.rb  crucible_controller.rb  flame_controller.rb  search_controller.rb  tongs_controller.rb
hub/app/controllers/anvil/: backups_controller.rb
hub/app/helpers/: anvil_helper.rb
hub/app/javascript/controllers/: dotfile_track_controller.js  file_tree_controller.js  global_search_controller.js  palette_upload_controller.js  pipeline_builder_controller.js  scripture_search_controller.js  sidebar_controller.js  tabs_controller.js
hub/app/jobs/: backup_job.rb
hub/app/services/forge/: database.rb  statistics.rb
hub/app/views/anvil/backups/: browse.html.erb  show.html.erb
hub/app/views/bellows/: _command_output.html.erb  index.html.erb  session_detail.html.erb  sessions.html.erb
hub/app/views/bridge/: _notification_result.html.erb  _sync_result.html.erb  index.html.erb
hub/app/views/crucible/: _command_output.html.erb  index.html.erb
hub/app/views/dashboard/: show.html.erb
hub/app/views/flame/: _command_output.html.erb  _journal_list.html.erb  index.html.erb  journal.html.erb  journal_entry.html.erb  journal_search.html.erb
hub/app/views/layouts/: _sidebar.html.erb  _topbar.html.erb  application.html.erb
hub/app/views/search/: show.html.erb
hub/app/views/tongs/: _command_output.html.erb  dotfiles.html.erb  index.html.erb
hub/config/: routes.rb
hub/config/initializers/: forge.rb
hub/spec/requests/: bellows_actions_spec.rb  bellows_sessions_spec.rb  bridge_actions_spec.rb  flame_actions_spec.rb  flame_journal_spec.rb  search_spec.rb  tongs_actions_spec.rb  tongs_dotfiles_spec.rb
hub/spec/requests/anvil/: backup_trigger_spec.rb
hub/spec/services/forge/: statistics_spec.rb
src/: anvil.rs  archive.rs  backup.rs  bridge.rs  chunkstore.rs  cli.rs  config.rs  crucible.rs  db.rs  error.rs  lib.rs  main.rs  mind.rs  mind_cmd.rs  models.rs  reflect.rs  restore.rs  scheduler.rs  spirit.rs  spirit_cmd.rs  theme.rs  theme_cmd.rs  tongs.rs  utils.rs  workshop.rs
tests/: integration.rs  spirit.rs
