[package]
name = "forge"
version = "1.1.0"
edition = "2021"
description = "Craft Your Digital Future — Git backup, AI agents, scripture, themes & system tools"
license = "Apache-2.0"
authors = ["synthalorian"]
readme = "README.md"
keywords = ["git", "backup", "cli", "ai-agents", "scripture", "themes"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/synthalorian/forge"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Git operations
git2 = "0.20"

# SQLite metadata database
rusqlite = { version = "0.33", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Progress bars
indicatif = "0.17"

# Compression
zstd = "0.13"

# Filesystem traversal
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Filesystem traversal
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SHA hashing for dedup
sha2 = "0.10"
hex = "0.4"

# Directories
dirs = "6"

# Terminal colors
# colored removed — we emit raw 24-bit ANSI truecolor directly for proper Synthwave84 purple rendering

# Temporary directories
tempfile = "3"

# Phase 2A — Spirit module
regex = "1"
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
